# Multiagent

./: .dockerignore  .env.example  .env.observability.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.observability.yaml  docker-compose.yaml  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml  release.yml
adapters/: a2a.py  cloud.py  cloud_ray.py  cost_ledger.py  embedder.py  llm.py  llm_litellm.py  memory.py  observability.py  payments.py  task_source_inspect.py  vectordb.py  web.py
adapters/simplemem_compat/: config_shim.py
core/: action_memory.py  agent.py  approval.py  audit.py  breaker.py  cli.py  commons.py  commons_metrics.py  conductor.py  config.py  delegation.py  doctor.py  email_ingest.py  email_worker.py  errors.py  evolution.py  experiment.py  factory.py  harness.py  identity.py  injection.py  launch.py  loop_guard.py  m15_governance.py  memorypack.py  metabolism.py  payment_guard.py  plugins.py  policy_engine.py  promotion.py  prompts.py  sanity.py  schemas.py  simulate.py  supervisor.py  swarm.py  tool_agent.py  tools.py  trust.py
docs/: DEPLOY.md  PLUGINS.md  QUICKSTART.md  RUN.md  payments-assessment.md
examples/: README.md  supervisor-research-write.yaml  swarm-customer-service.yaml
experiments/: README.md  smoke.yaml  synthetic_smoke.jsonl
omnigent/memory-agent/: config.yaml
omnigent/memory-agent/tools/mcp/: gmail.yaml  memory.yaml
omnigent/omnigent_policies/: a2a_trust.py  cost_limit.py  gmail_governance.py  payments_guard.py
packaging/: memory-agent.spec
reports/: m15_governance.md  m19_evolution.md
scripts/: bootstrap.sh  chat.py  demo.py  detect_hardware.py  download_models.py  install.sh  list_plugins.py  make_fixtures.py  setup.py  spawn.sh  verify_25.sh  verify_3.sh
services/: api.py  embed_service.py  mcp_server.py  webui.py
tests/: conftest.py  test_concurrency.py  test_e2e_scenario.py  test_m10_web.py  test_m11_email_worker.py  test_m12_payments.py  test_m13_commons.py  test_m14_infra.py  test_m15_pipeline.py  test_m15_vote_metrics.py  test_m17_conductor.py  test_m18_safety.py  test_m19_evolution.py  test_m1_llm.py  test_m20_observability.py  test_m20_setup.py  test_m21_cli_doctor.py  test_m21_plugins.py  test_m22_tool_agent.py  test_m23_harness.py  test_m24_swarm.py  test_m25_supervisor.py  test_m26_streaming.py  test_m27_templates.py  test_m28_progress.py  test_m29_agent_tracing.py  test_m2_embed.py  test_m30_delegation.py  test_m30b_payment_provenance.py  test_m31_launch.py  test_m32_simulate.py  test_m33_injection.py  test_m3_memory.py  test_m4_omnigent.py  test_m5_identity.py  test_m5b_federation_hardening.py  test_m6_gmail.py  test_m7_memorypack.py  test_m8_metabolism.py  test_m9_approval.py  (+3 more)
