[project]
name = "memory-agent"
version = "0.13.0"
description = "Multimodal memory agent: Gemma 4 (vLLM) + jina-embeddings-v5-omni + Omni-SimpleMem/Qdrant + Omnigent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "cryptography>=42.0",
    "zstandard>=0.22",
    "readability-lxml>=0.8.4.1",
    "html2text>=2025.4.15",
]

[project.scripts]
memory-agent = "core.cli:main"

[project.optional-dependencies]
# Heavy deps for running jina-embeddings-v5-omni locally (target machine only).
local-embed = [
    "torch>=2.3",
    "transformers>=4.45",
    "sentence-transformers>=3.0",
    "soundfile>=0.12",
]
# A2A 协议接入(M5;锁定 v1.0 stable 线)
a2a = [
    "a2a-sdk~=1.0.3",
]
# M21 drop-in 插件依赖(仅用到对应插件时装):
# LiteLLM —— 一个 OpenAI 格式调 100+ 家 LLM(llm.mode=litellm)
litellm = [
    "litellm>=1.44",
]
# Ray —— 大规模并发云供应商(cloud.provider=ray)
ray = [
    "ray>=2.9",
]
# Inspect-AI —— 把评测/benchmark 接成实验任务源(task_source: inspect)
inspect = [
    "inspect-ai>=0.3",
]
# Extra deps required by the Omni-SimpleMem backend (upstream package).
simplemem = [
    "openai>=1.0",
    "tiktoken>=0.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
]
# M20 B:可观测性(标准 OpenTelemetry → Langfuse OTLP)。仅 observability.enabled=true 需要。
observability = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
# M31 一键运行:把服务打成单个可执行文件(仅打包时需要;见 packaging/memory-agent.spec)。
build = [
    "pyinstaller>=6.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
# 只扫本项目三包 + 脚本;上游 bundle(omnigent/)不纳入
extend-exclude = [".venv", "omnigent", ".upstream"]

[tool.ruff.lint]
# 抓真实问题(E4 import 约定 / E9 语法 / F pyflakes:未用导入、未定义名等);
# 纯风格类(E7 如 l 变量名 / 分号)不纳入,避免为过 CI 而改动 core 既有代码。
select = ["E4", "E9", "F"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires live L0/L1/L2 services (skipped automatically when unreachable)",
]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapters", "core", "services"]
